grammar.js
    source_file: $ => seq(
      optional("HA"),
      optional($.export_header),
      choice(
        $.class_file,
        $.structure_file,
        $.function_file,
      ),
    ),

    class_file: $ => seq(
      $.forward_declaration_section,
      repeat($.structure_definition),
      optional($.shared_variables_section),
      optional($.global_variables_section),
      $.class_type_definition,
      optional($.global_var_declaration),
      optional($.external_function_prototypes),
      optional($.instance_variables_section),
      optional($.forward_function_prototypes),
      repeat(choice(
        $.event_definition,
        $.function_definition,
        $.on_event_definition,
      )),
      repeat($.inner_class_type_definition),
    ),

    _subroutine_prototype: $ => seq(
      optional($.global_keyword),
      optional($.access_modifier),
      $.subroutine_keyword,
      alias($.identifier, $.subroutine_name),
      $.parameter_list,
      optional($.throws_clause),
    ),

    function_definition: $ => choice(
      $._function_definition,
      $._subroutine_definition,
    ),

    _function_definition: $ => seq(
      $.function_definition_statement,
      optional(alias($.scriptable_block, $.function_definition_block)),
      $.function_definition_statement_end,
    ),

    _subroutine_definition: $ => seq(
      $.subroutine_definition_statement,
      optional(alias($.scriptable_block, $.subroutine_definition_block)),
      $.subroutine_definition_statement_end,
    ),

    subroutine_definition_statement: $ => seq($._subroutine_prototype, $.statement_separation),

    subroutine_definition_statement_end: $ => seq($.end_keyword, $.subroutine_keyword),

    parameter_list: $ => seq($.open_parenthesis, commaSep($.parameter), $.close_parenthesis),

    statement: $ => choice(
      $.choose_statement,
      $.do_loop,
      $.for_loop,
      $.goto_label,
      $.if_statement,
      $.inline_if_statement,
      $.local_variable_declaration_statement,
      $.try_catch_statement,
      $.while_loop,
      $.inline_statement,
      /*
      $.sql_statement, TODO
      */
    ),

    choose_statement: $ => seq(
      $.choose_case_statement,
      seq(
        repeat1($.choose_case_clause),
        optional($.choose_case_else_clause),
      ),
      $.choose_statement_end,
    ),

    choose_case_statement: $ => seq(
      $.choose_keyword,
      $.case_keyword,
      alias($.expression, $.test_expression),
    ),

    choose_case_clause: $ => seq(
      $.case_keyword,
      alias(choice(
        $.choose_case_to_expression,
        $.choose_case_is_relational_expression,
        $.choose_case_condition_expression,
      ), $.choose_case_clause_condition),
      optional(alias($.scriptable_block, $.choose_case_block)),
    ),

    choose_case_else_clause: $ => seq(
      $.case_keyword,
      $.else_keyword,
      optional(alias($.scriptable_block, $.choose_case_else_block)),
    ),

    choose_statement_end: $ => seq(
      $.end_keyword,
      $.choose_keyword,
    ),

    relational_operator: _ => choice('>', '<', '>=', '<='),

    do_loop: $ => seq(
      $.do_keyword,
      alias(optional($.scriptable_block), $.do_loop_block),
      $.do_loop_end,
    ),

    do_loop_end: $ => seq(
      $.loop_keyword,
      choice($.until_keyword, $.while_keyword),
      alias($.expression, $.condition),
    ),

    for_loop: $ => seq(
      $.for_loop_statement,
      optional(alias($.scriptable_block, $.for_loop_block)),
      $.next_keyword,
    ),

    for_loop_statement: $ => seq(
      $.for_keyword,
      alias($.expression, $.iterator_counter),
      "=",
      alias($.expression, $.initial_value),
      $.to_keyword,
      alias($.expression, $.final_value),
      optional(seq($.step_keyword, alias($.expression, $.increment_value))),
    ),

    goto_label: $ => seq(alias($.identifier, $.label), ":"),

    if_statement: $ => seq(
      $.if_then_statement,
      optional(alias($.scriptable_block, $.if_block)),
      repeat($.elseif_clause),
      optional($.else_clause),
      $.if_then_statement_end,
    ),

    if_then_statement: $ => seq(
      $.if_keyword,
      alias($.expression, $.condition),
      $.then_keyword,
    ),

    if_then_statement_end: $ => seq(
      $.end_keyword,
      $.if_keyword,
    ),

    elseif_clause: $ => seq(
      $.elseif_keyword,
      alias($.expression, $.condition),
      $.then_keyword,
      optional(alias($.scriptable_block, $.elseif_block)),
    ),

    else_clause: $ => seq(
      $.else_keyword,
      optional(alias($.scriptable_block, $.else_block)),
    ),

    inline_if_statement: $ => prec.left(seq(
      $.if_keyword,
      alias($.expression, $.condition),
      $.then_keyword,
      alias($.inline_statement, $.if_case_statement),
      optional(seq($.else_keyword, alias($.inline_statement, $.else_case_statement))),
    )),

    try_catch_statement: $ => seq(
      $.try_keyword,
      optional(alias($.scriptable_block, $.try_block)),
      repeat($.catch_clause),
      optional($.finally_clause),
      $.try_catch_statement_end,
    ),

    try_catch_statement_end: $ => seq(
      $.end_keyword,
      $.try_keyword,
    ),

    catch_clause: $ => seq(
      $.catch_clause_statement,
      optional(alias($.scriptable_block, $.catch_block)),
    ),

    catch_clause_statement: $ => seq(
      $.catch_keyword,
      $.open_parenthesis,
      alias($.type, $.throwable_type),
      alias($.identifier, $.throwable_name),
      $.close_parenthesis,
    ),

    finally_clause: $ => seq(
      $.finally_keyword,
      optional(alias($.scriptable_block, $.finally_block)),
    ),

    while_loop: $ => seq(
      $.while_loop_statement,
      optional(alias($.scriptable_block, $.while_loop_block)),
      $.loop_keyword,
    ),

    while_loop_statement: $ => seq(
      $.do_keyword,
      choice($.until_keyword, $.while_keyword),
      alias($.expression, $.condition),
    ),

    inline_statement: $ => choice(
      $.assignment_statement,
      $.call_statement,
      $.continue_statement,
      $.create_statement,
      $.destroy_statement,
      $.exit_statement,
      $.goto_statement,
      $.halt_statement,
      $.return_statement,
      $.throw_statement,
      $.expression_statement,
    ),

    assignment_statement: $ => seq(
      alias($.expression, $.l_value),
      "=",
      alias($.expression, $.r_value),
    ),

    call_statement: $ => seq(
      $.call_keyword,
      alias($.expression, $.ancestor_name),
      optional(seq('`', alias($.identifier, $.control_name))),
      "::",
      alias($.identifier, $.event_name),
    ),

    continue_statement: $ => $.continue_keyword,

    create_statement: $ => choice(
      seq(
        alias($.expression, $.l_value),
        "=",
        $.create_keyword,
        $.type,
      ),
      seq(
        alias($.expression, $.l_value),
        "=",
        $.create_keyword,
        $.using_keyword,
        alias($.expression, $.dynamic_type),
      ),
    ),

    destroy_statement: $ => choice(
      seq($.destroy_keyword, $.open_parenthesis, alias($.expression, $.variable_name), $.close_parenthesis),
      seq($.destroy_keyword, alias($.expression, $.variable_name)),
    ),

    exit_statement: $ => $.exit_keyword,

    goto_statement: $ => seq($.goto_keyword, alias($.identifier, $.label)),

    halt_statement: $ => seq($.halt_keyword, optional($.close_keyword)),

    return_statement: $ => prec.left(seq(
      $.return_keyword,
      optional(alias($.expression, $.return_value)),
    )),

    throw_statement: $ => seq(
      $.throw_keyword,
      choice(
        seq($.create_keyword, $.type),
        $.expression,
      ),
    ),

    expression_statement: $ => seq(
      choice(
        $.method_invocation,
        $.update_expression,
      ),
    ),

    method_invocation: $ => seq(
      optional(alias(choice($.expression), $.method_object)),
      optional(alias(choice(".", "::"), $.operator)),
      optional(alias(choice($.function_keyword, $.event_keyword), $.method_type)),
      optional(alias(choice($.static_keyword, $.dynamic_keyword), $.call_type)),
      optional(alias(choice($.trigger_keyword, $.post_keyword), $.when_type)),
      alias($.identifier, $.method_name),
      $.argument_list,
    ),

    argument_list: $ => seq(
      $.open_parenthesis,
      commaSep(seq(optional($.ref_keyword), $.expression)),
      $.close_parenthesis,
    ),

    type: $ => choice(
      $.primitive_type,
      $.identifier,
    ),

    integer_literal: _ => /\d+/,
    decimal_literal: _ => /\d*\.\d+/,
    string_literal: $ => choice(
      seq($.double_quote, alias(repeat(token.immediate(prec(1, choice(/[^"\\]/, /\\./, /~"/)))), $.string_content), $.double_quote),
      seq($.single_quote, alias(repeat(token.immediate(prec(1, choice(/[^'\\]/, /\\./, /~'/)))), $.string_content), $.single_quote),
    ),

    boolean_literal: $ => choice(
      $.true_keyword,
      $.false_keyword,
    ),

    open_parenthesis: _ => "(",
    close_parenthesis: _ => ")",
    single_quote: _ => "\'",
    double_quote: _ => "\"",
    statement_separation: _ => ";",

    call_keyword: _ => reservedWord("call"),
    case_keyword: _ => reservedWord("case"),
    catch_keyword: _ => reservedWord("catch"),
    choose_keyword: _ => reservedWord("choose"),
    close_keyword: _ => reservedWord("close"),
    continue_keyword: _ => reservedWord("continue"),
    create_keyword: _ => reservedWord("create"),
    destroy_keyword: _ => reservedWord("destroy"),
    do_keyword: _ => reservedWord("do"),
    else_keyword: _ => reservedWord("else"),
    elseif_keyword: _ => reservedWord("elseif"),
    end_keyword: _ => reservedWord("end"),
    exit_keyword: _ => reservedWord("exit"),
    finally_keyword: _ => reservedWord("finally"),
    for_keyword: _ => reservedWord("for"),
    global_keyword: _ => reservedWord("global"),
    goto_keyword: _ => reservedWord("goto"),
    halt_keyword: _ => reservedWord("halt"),
    if_keyword: _ => reservedWord("if"),
    is_keyword: _ => reservedWord("is"),
    loop_keyword: _ => reservedWord("loop"),
    next_keyword: _ => reservedWord("next"),
    return_keyword: _ => reservedWord("return"),
    step_keyword: _ => reservedWord("step"),
    subroutine_keyword: _ => reservedWord("subroutine"),
    then_keyword: _ => reservedWord("then"),
    throw_keyword: _ => reservedWord("throw"),
    to_keyword: _ => reservedWord("to"),
    true_keyword: _ => reservedWord("true"),
    try_keyword: _ => reservedWord("try"),
    until_keyword: _ => reservedWord("until"),
    using_keyword: _ => reservedWord("using"),
    while_keyword: _ => reservedWord("while"),
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9\-_$#%]*/,
